# SUBJECT-PROJECT__Capstone-Project

./: .env.example  .gitignore  README.md  capstone_project.sql  docker-compose.yml  strapi_export.sql
backend/: .env.example  CRUD_SERVICES_SUMMARY.md  README.md  REST_API_CONTROLLERS_DOCUMENTATION.md  build.gradle  docker-compose.yml
cms/: .env.example  README.md  docker-compose.yml  package-lock.json  package.json
crawler/: .env.sample  .gitignore  README.md  pyproject.toml  scrapy.cfg
crawler/crawler/: config.json  config.py  crawl_config.json  items.py  last_crawled_date.json  middlewares.py  pipelines.py  scheduler.py  settings.py  webhook_server.py
crawler/crawler/config/: config.py  settings.py
crawler/crawler/core/: scheduler.py
crawler/crawler/core/pipelines/: article_pipeline.py  cms_pipeline.py  pipelines.py
crawler/crawler/graphql_queries/: article_service.py  category_service.py  crawler_config_service.py  department_service.py
crawler/crawler/pipelines/: article_pipeline.py  cms_pipeline.py
crawler/crawler/services/: elasticsearch_client.py  vertex_ai_embedder.py
crawler/crawler/spiders/: crawlerSpider.py  crawler_spider.py  crawlerspider.py  fitiuheduvnSpider.py  iuheduvnSpider.py  planCrawler.json
crawler/crawler/utils/: strapi_client.py  text_utils.py  utils.py
frontend/: .env.sample  package-lock.json  package.json  tailwind.config.js
infra/: apis.tf  backend.tf  cicd.tf  networks.tf  outputs.tf  providers.tf  serverless.tf  variables.tf
mobile/: .env.example  App.js  app.json  package-lock.json  package.json
(+276 files in other folders)
