[tool.poetry]
name = "crawler"
version = "0.1.0"
description = ""
authors = ["HuyNguyen"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.12.0"
html2text = "^2024.2.26"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
