[tool.poetry]
name = "crawler"
version = "0.1.0"
description = ""
authors = ["HuyNguyen"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.12.0"
html2text = "^2024.2.26"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
python-dotenv = "^1.1.0"
torch = "^2.7.1"
w3lib = "^2.3.1"
sentencepiece = "^0.2.0"
apscheduler = "^3.11.0"
uvicorn = "^0.37.0"
fastapi = "^0.117.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
